# rag-chatbot1

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT.md  CHANGELOG.md  Dockerfile  HOW_TO_RUN.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_structure.py
.ebextensions/: 01_python.config
agent/: agent.py
backend/: main.py
parsing/: __init__.py  pdf_parser.py
tests/integration/: test_full_flow.py
tests/unit/: test_agent.py  test_pdf_parser.py
ui/: app.py
